--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,11 @@
 		</dependency>
 		<dependency>
             <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.9.1</version>
+        </dependency>
+		<dependency>
+            <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt-api</artifactId>
             <version>0.10.5</version>
         </dependency>
@@ -81,6 +86,10 @@
     		<groupId>javax.validation</groupId>
 	    	<artifactId>validation-api</artifactId>
 	    </dependency>
+	    <dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
