--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,5 @@ spring.mail.port=25
 spring.mail.username=65cdf73fd13e8d
 spring.mail.password=f1cd75a402b055
 spring.mail.protocol=smtp
+###########################
+jwt.expiration.time=600000
