--- a/pom.xml
+++ b/pom.xml
@@ -49,8 +49,10 @@
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
-			<optional>true</optional>
+			<version>1.18.16</version>
+			<scope>provided</scope>
 		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -143,8 +145,8 @@
 	            <groupId>org.apache.maven.plugins</groupId>
 	            <artifactId>maven-compiler-plugin</artifactId>
 	            <configuration>
-	                <source>1.8</source> <!-- depending on your project -->
-	                <target>1.8</target> <!-- depending on your project -->
+	                <source>11</source> <!-- depending on your project -->
+	                <target>11</target> <!-- depending on your project -->
 	                <annotationProcessorPaths>
 	                    <path>
 	                        <groupId>org.mapstruct</groupId>
@@ -154,15 +156,20 @@
 	                    <path>
 	                    	<groupId>org.projectlombok</groupId>
 	                    	<artifactId>lombok</artifactId>
-	                    	<version>1.18.8</version>
+	                    	<version>1.18.16</version>
 	                    </path>
-	                    <!-- other annotation processors -->
+						<path>
+							<groupId>org.projectlombok</groupId>
+							<artifactId>lombok-mapstruct-binding</artifactId>
+							<version>0.2.0</version>
+						</path>
+						<!-- other annotation processors -->
 	                </annotationProcessorPaths>
-	                 <path>
-                            <groupId>org.projectlombok</groupId>
-                            <artifactId>lombok</artifactId>
-                            <version>1.18.8</version>
-                        </path>
+<!--	                 <path>-->
+<!--                            <groupId>org.projectlombok</groupId>-->
+<!--                            <artifactId>lombok</artifactId>-->
+<!--                            <version>1.18.8</version>-->
+<!--					 </path>-->
 	            </configuration>
 	        </plugin>
 		</plugins>
