--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -3,15 +3,14 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.4.3</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<groupId>dnt00</groupId>
+		<artifactId>super-module</artifactId>
+		<version>1.0.0-SNAPSHOT</version>
 	</parent>
-	<groupId>dnt</groupId>
-	<artifactId>clone-reddit</artifactId>
+	<groupId>dnt00</groupId>
+	<artifactId>backend</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>clone-reddit</name>
+	<name>backend</name>
 	<description>Learn java web</description>
 	<properties>
 		<java.version>11</java.version>
