--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,15 +7,18 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "ngcc"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "^11.0.9",
+    "@angular/cdk": "^11.2.13",
     "@angular/common": "~11.0.1",
     "@angular/compiler": "~11.0.1",
     "@angular/core": "~11.0.1",
     "@angular/forms": "~11.0.1",
+    "@angular/material": "^11.2.13",
     "@angular/platform-browser": "~11.0.1",
     "@angular/platform-browser-dynamic": "~11.0.1",
     "@angular/router": "~11.0.1",
@@ -28,6 +31,7 @@
     "@tinymce/tinymce-angular": "^4.2.2",
     "bootstrap": "^4.6.0",
     "jquery": "^3.6.0",
+    "ng-zorro-antd": "^11.4.2",
     "ngx-toastr": "^13.2.1",
     "ngx-webstorage": "^7.0.1",
     "rxjs": "~6.6.0",
